# greppic

./: README.md  pyproject.toml
greppic/: main.py
greppic/images/: tests.py  views.py
