[tool.poetry]
name = "greppic"
version = "0.0.1"
description = "Image processing server"
authors = ["RobinRheem <robin.rheem@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.46.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
